# Huffman-Archiver-in-C

./: CMakeLists.txt  main.c
archive/: archiver.c  archiver.h  dearchiver.c
data_structures/: priority_queue.c  priority_queue.h
huffman/: huffman.c  huffman.h
utils/: utils.c  utils.h
